overflow fixed

--- a/src/pages/Lol/Champions/Champion/champion.module.scss
+++ b/src/pages/Lol/Champions/Champion/champion.module.scss
@@ -542,8 +542,8 @@
         backdrop-filter: blur(5px);
         padding: 2rem 0 2rem 2rem;
         gap: 1rem;
-        overflow-y: hidden;
-        overflow-x: scroll;
+        overflow-x: hidden;
+        overflow-y: scroll;
         border-top-left-radius: 0.5rem;
         border-bottom-left-radius: 0.5rem;
 
@@ -762,7 +762,8 @@
           background-color: transparent;
           backdrop-filter: blur(0);
           padding: 1rem 0;
-          overflow-y: scroll;
+          overflow-x: scroll;
+          overflow-y: hidden;
           border-radius: 0;
 
           li {
